Update title block
Co-authored-by: M <lmiguelvargasf@gmail.com>

--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,8 +1,6 @@
 {% extends "base.html.jinja" %}
 
-{% block title %}
-  Index
-{% endblock %}
+{% block title %}Index{% endblock %}
 
 {% block page_content %}
   <h1>Blueberry School</h1>
