--- a/templates/404.html.jinja
+++ b/templates/404.html.jinja
@@ -1,6 +1,6 @@
 {% extends "base.html.jinja" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Page Not Found{% endblock %}
 
 {% block page_content %}
   <h1>404</h1>
