Pass bootstrap integrity

--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -7,7 +7,12 @@
 
     {% block styles %}
       {# Bootstrap CSS #}
-      {{ bootstrap.load_css(version='5.2.1') }}
+      {{
+        bootstrap.load_css(
+          version='5.2.1',
+          bootstrap_sri='sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT',
+        )
+      }}
     {% endblock %}
   
     {# Favicon #}
@@ -27,7 +32,14 @@
 
     {% block scripts %}
       {# Bootstrap JS #}
-      {{ bootstrap.load_js(version='5.2.1', popper_version='2.11.6') }}
+      {{
+        bootstrap.load_js(
+          version='5.2.1',
+          popper_version='2.11.6',
+          bootstrap_sri='sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3',
+          popper_sri='sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz',
+        )
+      }}
     {% endblock %}
   </body>
 </html>
