--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -26,6 +26,20 @@
   <body>
     {% block content %}
     <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+      </div>
       {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
