--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -26,6 +26,22 @@
   <body>
     {% block content %}
     <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                {% with categories = ['primary', 'success', 'warning', 'danger'] %}
+                  <div class="alert alert-{{ category if category in categories else 'dark' }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {% endwith %}
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+      </div>
       {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
@@ -36,8 +52,8 @@
         bootstrap.load_js(
           version='5.2.1',
           popper_version='2.11.6',
-          bootstrap_sri='sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3',
-          popper_sri='sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz',
+          bootstrap_sri='sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz',
+          popper_sri='sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3',
         )
       }}
     {% endblock %}
