--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon/favicon-16x16.png') }}">
     <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}">
 
-    {# Icons #}
+    {# Bootstrap Icons #}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     
     <title>{% block title %}{% endblock %} - Blueberry School</title>
