--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -20,6 +20,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon/favicon-16x16.png') }}">
     <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}">
+
+    {# Bootstrap Icons #}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     
     <title>{% block title %}{% endblock %} - Blueberry School</title>
   </head>
@@ -33,7 +36,16 @@
               {% for category, message in messages %}
                 {% with categories = ['primary', 'success', 'warning', 'danger'] %}
                   <div class="alert alert-{{ category if category in categories else 'dark' }} alert-dismissible fade show" role="alert">
-                    {{ message }}
+                    {% with icon = {
+                      'primary': 'info-circle-fill',
+                      'success': 'check-circle-fill',
+                      'warning': 'exclamation-triangle-fill',
+                      'danger': 'x-octagon-fill',
+                      }.get(category, 'info-square-fill')
+                    %}
+                      <i class="bi bi-{{ icon }}"></i>
+                    {% endwith %}
+                    <span class="ms-2">{{ message }}</span>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
                 {% endwith %}
