--- a/app/templates/404.html.jinja
+++ b/app/templates/404.html.jinja
@@ -6,5 +6,5 @@
   <h1>404</h1>
   <p>You've found a page that doesn't exist!</p>
   <p>Breathe in, and on the out breath, go back and try again.</p>
-  <a class="btn btn-primary" href="{{ url_for('index') }}">Back to home</a>
+  <a class="btn btn-primary" href="{{ url_for('main.index') }}">Back to home</a>
 {% endblock %}
