--- a/app/templates/auth/login.html.jinja
+++ b/app/templates/auth/login.html.jinja
@@ -1,7 +1,9 @@
 {% extends "base.html.jinja" %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}Login{% endblock %}
 
 {% block page_content %}
 <h1>Login</h1>
+{{ render_form(form) }}
 {% endblock %}
