--- a/app/templates/auth/login.html.jinja
+++ b/app/templates/auth/login.html.jinja
@@ -5,5 +5,9 @@
 
 {% block page_content %}
 <h1>Login</h1>
-{{ render_form(form) }}
+<div class="row">
+  <div class="col-lg-3">
+    {{ render_form(form) }}
+  </div>
+</div>
 {% endblock %}
