--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -29,6 +29,14 @@
   <body>
     {% block content %}
     <div class="container">
+      <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{ url_for('main.index') }}">
+            <img src="{{ url_for('static', filename='images/logos/blueberry.png')}}" alt="Logo" width="45" height="45" class="align-middle">
+            <span class="align-middle">Blueberry School</span>
+          </a>
+        </div>
+      </nav>
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
           {% with messages = get_flashed_messages(with_categories=true) %}
