--- a/app/templates/auth/login.html.jinja
+++ b/app/templates/auth/login.html.jinja
@@ -4,7 +4,7 @@
 {% block title %}Login{% endblock %}
 
 {% block page_content %}
-<h1>Login</h1>
+<h1>Log In</h1>
 <div class="row">
   <div class="col-lg-3">
     {{ render_form(form) }}
