--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -35,6 +35,17 @@
             <img src="{{ url_for('static', filename='images/logos/blueberry.png')}}" alt="Logo" width="45" height="45" class="align-middle">
             <span class="align-middle">Blueberry School</span>
           </a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              {% if current_user.is_authenticated %}
+              <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+              {% else %}
+                {% if url_for(request.endpoint) != url_for('auth.login_get') %}
+                <a class="btn btn-primary btn-md" href="{{ url_for('auth.login_get') }}">Log In</a>
+                {% endif %}
+              {% endif %}
+            </li>
+          </ul>
         </div>
       </nav>
       <div class="row d-flex justify-content-center">
