--- a/app/templates/auth/login.html.jinja
+++ b/app/templates/auth/login.html.jinja
@@ -7,7 +7,7 @@
 <h1>Log In</h1>
 <div class="row">
   <div class="col-lg-3">
-    {{ render_form(form) }}
+    {{ render_form(form, action=url_for('auth.login_post')) }}
   </div>
 </div>
 {% endblock %}
