--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -77,6 +77,9 @@
         {% endif %}
       {% endwith %}
 
+      {# Footer #}
+
+
       {# Page content #}
       {% block page_content %}{% endblock %}
     </div>
