--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -4,26 +4,26 @@
 
 {% block page_content %}
 {# Carousel #}
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/static/images/carousel-index/1.png" class="d-block w-100" alt="...">
+      <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online - Anywhere, distance is not a limit">
     </div>
     <div class="carousel-item">
-      <img src="/static/images/carousel-index/2.png" class="d-block w-100" alt="...">
+      <img src="{{ url_for('static', filename='images/carousels/index/2.png') }}" class="d-block w-100" alt="Group Classes - Customized and individual feedback">
     </div>
     <div class="carousel-item">
-      <img src="/static/images/carousel-index/3.png" class="d-block w-100" alt="...">
+      <img src="{{ url_for('static', filename='images/carousels/index/3.png') }}" class="d-block w-100" alt="Communicative Method - Interactive classes">
     </div>
     <div class="carousel-item">
-      <img src="/static/images/carousel-index/4.png" class="d-block w-100" alt="...">
+      <img src="{{ url_for('static', filename='images/carousels/index/4.png') }}" class="d-block w-100" alt="Daily Vocabulary - Review class summaries">
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#indexCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#indexCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
