--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -3,5 +3,29 @@
 {% block title %}Index{% endblock %}
 
 {% block page_content %}
-  <h1>Index</h1>
+{# Carousel #}
+<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online - Anywhere, distance is not a limit">
+    </div>
+    <div class="carousel-item">
+      <img src="{{ url_for('static', filename='images/carousels/index/2.png') }}" class="d-block w-100" alt="Group Classes - Customized and individual feedback">
+    </div>
+    <div class="carousel-item">
+      <img src="{{ url_for('static', filename='images/carousels/index/3.png') }}" class="d-block w-100" alt="Communicative Method - Interactive classes">
+    </div>
+    <div class="carousel-item">
+      <img src="{{ url_for('static', filename='images/carousels/index/4.png') }}" class="d-block w-100" alt="Daily Vocabulary - Review class summaries">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#indexCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#indexCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 {% endblock %}
