--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <h1>Student Table</h1>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">ID</th>
