--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -40,6 +40,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.student_table') }}">Student</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.representative_table') }}">Representative</a></li>
             </ul>
           </div>
           {% endif %}
