--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -41,6 +41,7 @@
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.student_table') }}">Student</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.representative_table') }}">Representative</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.cycle_table') }}">Cycle</a></li>
             </ul>
           </div>
           {% endif %}
