Implement payment table view

--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -43,6 +43,7 @@
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.representative_table') }}">Representative</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.cycle_table') }}">Cycle</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.class_table') }}">Class</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.payment_table') }}">Payment</a></li>
             </ul>
           </div>
           {% endif %}
