--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -30,12 +30,23 @@
     {% block content %}
     <div class="container">
       {# Navigation bar #}
-      <nav class="navbar bg-light">
+      <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{ url_for('main.index') }}">
             <img src="{{ url_for('static', filename='images/logos/blueberry.png')}}" alt="Logo" width="45" height="45" class="align-middle">
             <span class="align-middle">Blueberry School</span>
           </a>
+          {% if current_user.is_authenticated %}
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.student_table') }}">Student</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.representative_table') }}">Representative</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.cycle_table') }}">Cycle</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.class_table') }}">Class</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.payment_table') }}">Payment</a></li>
+            </ul>
+          </div>
+          {% endif %}
           <ul class="nav justify-content-end">
             <li class="nav-item">
               {% if current_user.is_authenticated %}
