--- a/app/templates/admin/cycle/table-view.html.jinja
+++ b/app/templates/admin/cycle/table-view.html.jinja
@@ -4,26 +4,28 @@
 
 {% block page_content %}
 <h1>Cycle Table</h1>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Month</th>
-      <th scope="col">Year</th>
-      <th scope="col">Start date</th>
-      <th scope="col">End date</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for cycle in cycles %}
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Month</th>
+        <th scope="col">Year</th>
+        <th scope="col">Start date</th>
+        <th scope="col">End date</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for cycle in cycles %}
       <tr>
         <td>{{ cycle.id }}</td>
         <td>{{ cycle.month.value }}</td>
         <td>{{ cycle.year }}</td>
         <td>{{ cycle.start_date }}</td>
-        <td>{{ cycle.end_date  }}</td>
+        <td>{{ cycle.end_date }}</td>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
