--- a/app/templates/admin/payment/table-view.html.jinja
+++ b/app/templates/admin/payment/table-view.html.jinja
@@ -4,18 +4,19 @@
 
 {% block page_content %}
 <h1>Payment Table</h1>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Discount</th>
-      <th scope="col">Student</th>
-      <th scope="col">Cycle</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for payment in payments %}
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Discount</th>
+        <th scope="col">Student</th>
+        <th scope="col">Cycle</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for payment in payments %}
       <tr>
         <td>{{ payment.id }}</td>
         <td>{{ payment.amount }}</td>
@@ -23,7 +24,8 @@
         <td>{{ payment.student }}</td>
         <td>{{ payment.cycle }}</td>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
