--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -4,19 +4,20 @@
 
 {% block page_content %}
 <h1>Student Table</h1>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Identity Document</th>
-      <th scope="col">First Name</th>
-      <th scope="col">First Surname</th>
-      <th scope="col">Email</th>
-      <th scope="col">Phone Number</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for student in students %}
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Identity Document</th>
+        <th scope="col">First Name</th>
+        <th scope="col">First Surname</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone Number</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for student in students %}
       <tr>
         <td>{{ student.id }}</td>
         <td>{{ student.identity_document }}</td>
@@ -25,7 +26,8 @@
         <td>{{ student.email }}</td>
         <td>{{ student.phone_number if student.phone_number else '' }}</td>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
