--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -36,11 +36,14 @@
             <img src="{{ url_for('static', filename='images/logos/blueberry.png')}}" alt="Logo" width="45" height="45" class="align-middle">
             <span class="align-middle">Blueberry School</span>
           </a>
+          {# Toggle button #}
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          {% if current_user.is_authenticated %}
+          {# Collapsible wrapper #}
           <div class="collapse navbar-collapse" id="navbarItems">
+            {# Links to the left #}
+            {% if current_user.is_authenticated %}
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.student_table') }}">Student</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.representative_table') }}">Representative</a></li>
@@ -48,10 +51,9 @@
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.class_table') }}">Class</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.payment_table') }}">Payment</a></li>
             </ul>
-          </div>
-          {% endif %}
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
+            {% endif %}
+            {# Links to the right #}
+            <div class="navbar-nav ms-auto">
               {% if current_user.is_authenticated %}
               <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
               {% else %}
@@ -59,8 +61,8 @@
                 <a class="btn btn-primary btn-md" href="{{ url_for('auth.login_get') }}">Log In</a>
                 {% endif %}
               {% endif %}
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </nav>
 
