--- a/app/templates/admin/class/class.html.jinja
+++ b/app/templates/admin/class/class.html.jinja
@@ -33,7 +33,7 @@
     <div class="col-lg-4 text-start my-2">{{ cycle }}</div>
   </div>
   {# Students information #}
-  {% if students != [] %}
+  {% if students %}
     <div class="row">
       <div class="col-lg-1 text-start my-3"><i class="bi bi-people-fill"></i></div>
       <div class="col-lg-3 text-start my-3">Students information</div>
