--- a/app/templates/admin/class/class.html.jinja
+++ b/app/templates/admin/class/class.html.jinja
@@ -3,7 +3,7 @@
 {% block title %}Admin - Class{% endblock %}
 
 {% block page_content %}
-<div class="grid text-center" style="--bs-rows: 6; --bs-columns: 4;">
+<div id="class-info">
   {# Class information #}
   <div class="row">
     <div class="col-lg-1 text-start my-3"><i class="bi bi-clock-fill"></i></div>
