--- a/app/templates/admin/student/student.html.jinja
+++ b/app/templates/admin/student/student.html.jinja
@@ -38,7 +38,7 @@
     <div class="col-lg-4 text-start my-2">{{ student.phone_number }}</div>
   </div>
   {# Class Information #}
-  {% if class_ is not none %}
+  {% if class_ %}
     <div class="row">
       <div class="col-lg-1 text-start my-3"><i class="bi bi-clock-fill"></i></div>
       <div class="col-lg-3 text-start my-3">Class information</div>
