--- a/app/templates/admin/student/student.html.jinja
+++ b/app/templates/admin/student/student.html.jinja
@@ -49,7 +49,7 @@
     </div>
   {% endif %}
   {# Representative Information #}
-  {% if representative is not none %}
+  {% if representative %}
     <div class="row">
       <div class="col-lg-1 text-start my-3"><i class="bi bi-people-fill"></i></div>
       <div class="col-lg-3 text-start my-3">Representative information</div>
