--- a/app/templates/admin/student/student.html.jinja
+++ b/app/templates/admin/student/student.html.jinja
@@ -3,7 +3,7 @@
 {% block title %}Admin - Student{% endblock %}
 
 {% block page_content %}
-<div class="grid text-center" style="--bs-rows: 6; --bs-columns: 4;">
+<div id="student-info">
   {# Student information #}
   <div class="row">
     <div class="col-lg-1 text-start my-3"><i class="bi bi-person-fill"></i></div>
