--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -23,7 +23,7 @@
         <td>
           <ul class="list-unstyled">
             <li>
-              <a class="text-muted" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
+              <a class="text-dark" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
             </li>
           </ul>
         </td>
