Implement page to create representative

--- a/app/templates/admin/representative/table-view.html.jinja
+++ b/app/templates/admin/representative/table-view.html.jinja
@@ -4,6 +4,11 @@
 
 {% block page_content %}
 <h1>Representative Table</h1>
+{# Create Representative #}
+<div class="row">
+  <div class="col-lg-3 text-start my-3">
+    <a class="btn btn-primary" href="{{ url_for('admin.create_representative_get')}}" role="button"><i class="bi bi-plus"></i> Create</a>
+  </div>
 <div class="table-responsive">
   <table class="table table-hover">
     <thead>
