Implement-student-form

--- a/app/templates/admin/representative/table-view.html.jinja
+++ b/app/templates/admin/representative/table-view.html.jinja
@@ -9,6 +9,8 @@
   <div class="col-lg-3 text-start my-3">
     <a class="btn btn-primary" href="{{ url_for('admin.create_representative_get')}}" role="button"><i class="bi bi-plus"></i> Create</a>
   </div>
+</div>
+{# Representative Table #}
 <div class="table-responsive">
   <table class="table table-hover">
     <thead>
