--- a/app/templates/admin/class/table-view.html.jinja
+++ b/app/templates/admin/class/table-view.html.jinja
@@ -4,6 +4,13 @@
 
 {% block page_content %}
 <h1>Class Table</h1>
+{# Create Class #}
+<div class="row">
+  <div class="col-lg-3 text-start my-3">
+    <a class="btn btn-primary" href="{{ url_for('admin.create_class_get')}}" role="button"><i class="bi bi-plus"></i> Create</a>
+  </div>
+</div>
+{# Class Table #}
 <div class="table-responsive">
   <table class="table table-hover">
     <thead>
