--- a/app/templates/admin/payment/table-view.html.jinja
+++ b/app/templates/admin/payment/table-view.html.jinja
@@ -4,6 +4,12 @@
 
 {% block page_content %}
 <h1>Payment Table</h1>
+<div class="row">
+  <div class="col-lg-3 text-start my-3">
+    <a class="btn btn-primary" href="{{ url_for('admin.create_payment_get')}}" role="button"><i class="bi bi-plus"></i> Create</a>
+  </div>
+</div>
+{# Payment Table #}
 <div class="table-responsive">
   <table class="table table-hover">
     <thead>
