--- a/app/templates/admin/representative/table-view.html.jinja
+++ b/app/templates/admin/representative/table-view.html.jinja
@@ -30,7 +30,7 @@
         <td>
           <ul class="list-unstyled">
             <li>
-              <a class="text-dark" href="{{ url_for('admin.edit_representative_get', representative_id=representative.id) }}"><i class="bi bi-eye"></i></a>
+              <a class="text-dark" href="{{ url_for('admin.edit_representative_get', representative_id=representative.id) }}"><i class="bi bi-pencil"></i></a>
             </li>
           </ul>
         </td>
