View for post method

--- a/app/templates/admin/representative/edit.html.jinja
+++ b/app/templates/admin/representative/edit.html.jinja
@@ -7,7 +7,7 @@
 <h3>Edit Representative</h3>
 <div class="row">
   <div class="col-lg-3">
-    {{ render_form(form, action=url_for('admin.edit_representative_get')) }}
+    {{ render_form(form, action=url_for('admin.edit_representative_post, representative_id=representative.id')) }}
   </div>
 </div>
 {% endblock %}
