--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -28,7 +28,7 @@
       {% for student in students %}
       <tr>
         <td>
-          <ul class="list-unstyled list-group list-group-horizontal-lg">
+          <ul class="list-group list-group-horizontal-lg">
             <li>
               <a class="text-dark list-group-item" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
             </li>
