--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -28,12 +28,12 @@
       {% for student in students %}
       <tr>
         <td>
-          <ul class="list-group list-group-horizontal-lg">
-            <li>
-              <a class="text-dark list-group-item" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item">
+              <a class="text-dark" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
             </li>
-            <li>
-              <a class="text-dark list-group-item" href="{{ url_for('admin.edit_student_get', student_id=student.id) }}"><i class="bi bi-pencil"></i></a>
+            <li class="list-group-item">
+              <a class="text-dark" href="{{ url_for('admin.edit_student_get', student_id=student.id) }}"><i class="bi bi-pencil"></i></a>
             </li>
           </ul>
         </td>
