--- a/app/templates/admin/student/table-view.html.jinja
+++ b/app/templates/admin/student/table-view.html.jinja
@@ -29,10 +29,10 @@
       <tr>
         <td>
           <ul class="list-group list-group-horizontal">
-            <li class="list-group-item">
+            <li class="list-group-item flex-fill text-center">
               <a class="text-dark" href="{{ url_for('admin.student_view', student_id=student.id) }}"><i class="bi bi-eye"></i></a>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item flex-fill text-center">
               <a class="text-dark" href="{{ url_for('admin.edit_student_get', student_id=student.id) }}"><i class="bi bi-pencil"></i></a>
             </li>
           </ul>
