--- a/app/templates/admin/class/table-view.html.jinja
+++ b/app/templates/admin/class/table-view.html.jinja
@@ -29,9 +29,12 @@
       {% for class_ in classes %}
       <tr>
         <td>
-          <ul class="list-unstyled">
-            <li>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item flex-fill text-center px-1">
               <a class="text-dark" href="{{ url_for('admin.class_view', class_id=class_.id) }}"><i class="bi bi-eye"></i></a>
+            </li>
+            <li class="list-group-item flex-fill text-center px-1">
+              <a class="text-dark" href="{{ url_for('admin.edit_class_get', class_id=class_.id) }}"><i class="bi bi-pencil"></i></a>
             </li>
           </ul>
         </td>
