--- a/app/templates/admin/class/edit.html.jinja
+++ b/app/templates/admin/class/edit.html.jinja
@@ -7,7 +7,7 @@
 <h3>Edit Class</h3>
 <div class="row">
   <div class="col-lg-3">
-    {# {{ render_form(form, action=url_for('admin.edit_class_post', class_id=class.id)) }} #}
+    {{ render_form(form, action=url_for('admin.edit_class_post', class_id=class.id)) }}
   </div>
 </div>
 {% endblock %}
