Display delete_form in payment table view

--- a/app/templates/admin/cycle/table-view.html.jinja
+++ b/app/templates/admin/cycle/table-view.html.jinja
@@ -30,7 +30,7 @@
         <td>
           <ul class="list-group list-group-horizontal">
             <li class="list-group-item flex-fill text-center px-1">
-              {{ render_form(delete_form, action=url_for('admin.cycle_class', cycle_id=cycle_.id)) }}
+              {{ render_form(delete_form, action=url_for('admin.delete_cycle', cycle_id=cycle_id)) }}
             </li>
           </ul>
         </td>
