--- a/app/templates/admin/payment/table-view.html.jinja
+++ b/app/templates/admin/payment/table-view.html.jinja
@@ -29,7 +29,7 @@
         <td>
           <ul class="list-group list-group-horizontal">
             <li class="list-group-item flex-fill text-center px-1">
-              {{ render_form(delete_form, action=url_for('admin.delete_payment', payment_id=payment_id)) }}
+              {{ render_form(delete_form, action=url_for('admin.delete_payment', payment_id=payment.id)) }}
             </li>
           </ul>
         </td>
