--- a/app/templates/admin/representative/table-view.html.jinja
+++ b/app/templates/admin/representative/table-view.html.jinja
@@ -29,8 +29,8 @@
       {% for representative in representatives %}
       <tr>
         <td>
-          <ul class="list-unstyled">
-            <li>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item flex-fill text-center px-1">
               <a class="text-dark" href="{{ url_for('admin.edit_representative_get', representative_id=representative.id) }}"><i class="bi bi-pencil"></i></a>
             </li>
             <li class="list-group-item flex-fill text-center px-1">
