Delete model instances (#78)
* Add pencil button

* Add view for get method

* Update student forms

* Add view for get method

* Add student-edit template

* Add list group for icons

* Update changes

* Update changes

* Implement custom widget DeleteButtonWidget

* Update class for icons

* Implement form to delete a student

* Pass delete_for in student table

* Implement view to delete student

* Update view for get method

* Add view for post method

* Update view for post method

* Display trash icon

* Redirect properly

* Update icon

* Rename form

* Update docstring

* Add flash message for delete student

* Implement view functions to models

* Display delete_form in class table view

* Display delete_form in representative table view

* Display delete_form in cycle table view

* Display delete_form in payment table view

* Edit icons

* Update flash

* Update app/admin/forms.py

Co-authored-by: M <m@mathsistor.com>

Co-authored-by: Mïk <m@mathsistor.com>

--- a/app/templates/admin/cycle/table-view.html.jinja
+++ b/app/templates/admin/cycle/table-view.html.jinja
@@ -1,4 +1,5 @@
 {% extends "base.html.jinja" %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}Admin - Cycle{% endblock %}
 
@@ -15,6 +16,7 @@
   <table class="table table-hover">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">ID</th>
         <th scope="col">Month</th>
         <th scope="col">Year</th>
@@ -25,6 +27,13 @@
     <tbody>
       {% for cycle in cycles %}
       <tr>
+        <td>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item flex-fill text-center px-1">
+              {{ render_form(delete_form, action=url_for('admin.delete_cycle', cycle_id=cycle.id)) }}
+            </li>
+          </ul>
+        </td>
         <td>{{ cycle.id }}</td>
         <td>{{ cycle.month.value }}</td>
         <td>{{ cycle.year }}</td>
