--- a/app/templates/admin/payment/table-view.html.jinja
+++ b/app/templates/admin/payment/table-view.html.jinja
@@ -1,4 +1,5 @@
 {% extends "base.html.jinja" %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}Admin - Payment{% endblock %}
 
@@ -14,6 +15,7 @@
   <table class="table table-hover">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">ID</th>
         <th scope="col">Amount</th>
         <th scope="col">Discount</th>
@@ -24,6 +26,13 @@
     <tbody>
       {% for payment in payments %}
       <tr>
+        <td>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item flex-fill text-center px-1">
+              {{ render_form(delete_form, action=url_for('admin.delete_payment', payment_id=payment.id)) }}
+            </li>
+          </ul>
+        </td>
         <td>{{ payment.id }}</td>
         <td>{{ payment.amount }}</td>
         <td>{{ payment.discount if payment.discount else '' }}</td>
