Change cards attributes

--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -31,21 +31,21 @@
 {# Cards #}
 <div class="card-group my-4" display: flex>
   <div class="card">
-    <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="We care about you">
+    <img src="{{ url_for('static', filename='images/cards/index/1.png') }}" class="card-img-top d-none d-sm-block" alt="We care about you">
     <div class="card-body">
       <h5 class="text-center">We care about you</h5>
       <p class="card-text text-center">That is why we have customized and individual feedback.</p>
     </div>
   </div>
   <div class="card">
-    <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="Have fun while learning">
+    <img src="{{ url_for('static', filename='images/cards/index/2.png') }}" class="card-img-top d-none d-sm-block" alt="Have fun while learning">
     <div class="card-body">
       <h5 class="text-center">Learn while having fun</h5>
       <p class="card-text text-center">Enjoy our interactive classes. In the end, English will be fun.</p>
     </div>
   </div>
   <div class="card">
-    <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top img-fluid d-none d-sm-block" alt="The world is in your hands">
+    <img src="{{ url_for('static', filename='images/cards/index/3.png') }}" class="card-img-top d-none d-sm-block" alt="The world is in your hands">
     <div class="card-body">
       <h5 class="text-center">Distance is not a limit</h5>
       <p class="card-text text-center">Learn from anywhere with live classes.</p>
