Remove carousel style

--- a/app/templates/index.html.jinja
+++ b/app/templates/index.html.jinja
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 {# Carousel #}
-<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" display: flex>
+<div id="indexCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{{ url_for('static', filename='images/carousels/index/1.png') }}" class="d-block w-100" alt="Learn English Online">
